feat(deck): add School of Magic

--- a/public/html/game/game.html
+++ b/public/html/game/game.html
@@ -52,7 +52,7 @@ Joined Players
           <div ui-view="thief"></div>
           <div ui-view="magician"></div>
         </div>
-        <div ui-view="haunted-city"></div>
+        <div ui-view="type-selection"></div>
       </div>
       <div ui-view="warlord" class="col-lg-4"></div>
     </div>
